add login and register
